# elegen_api

./: .gitignore  README.md  docker-compose.yaml
infra/: .gitignore  main.tf
tracking_system/: Dockerfile  alembic.ini  pyproject.toml
tracking_system/app/: db.py  main.py  models.py
tracking_system/app/routes/: health.py  orders.py  samples.py
tracking_system/app/schemas/: pydantic_models.py
tracking_system/app/services/: order_service.py  sample_service.py
tracking_system/migrations/: env.py  script.py.mako
tracking_system/migrations/versions/: 2024_09_22_0114-636211eb4655_init.py  2024_10_10_1602-73be563f9f8d_init_db.py
tracking_system/tests/: test_main.py
