[tool.poetry]
name = "tracking-system"
version = "0.1.0"
description = ""
authors = ["Trung Nguyen <trung.nt2k@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
fastapi = "^0.115.0"
sqlmodel = "^0.0.22"
uvicorn = "^0.30.6"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
